# Formula

./: CMakeLists.txt  main.cpp
include/: layer.h  net.h
lib/: libformula.dylib
src/: net.cpp
